Fix weird vertical alignment of reorder track buttons

--- a/root/static/styles/release-editor.less
+++ b/root/static/styles/release-editor.less
@@ -107,6 +107,7 @@ fieldset.advanced-disc {
         background: @text-white;
         border: 1px dotted @very-light-border;
         padding: 0 5px;
+        vertical-align: inherit !important;
 
         &.position { width: 2em; }
         &.position input { text-align: right; }
